@@ -58,8 +58,7 @@
 #' @examples
 #' \dontrun{
 #' # download 260 sounds from Anikin & Persson (2017)
-#' # http://cogsci.se/personal/results/
-#' # 01_anikin-persson_2016_naturalistics-non-linguistic-vocalizations/260sounds_wav.zip
+#' # http://cogsci.se/publications/anikin-persson_2017_nonlinguistic-vocs/anikin-persson_2017_nonlinguistic-vocs.html/260sounds_wav.zip
 #' # unzip them into a folder, say '~/Downloads/temp'
 #' myfolder = '~/Downloads/temp'  # 260 .wav files live here
 #'
