@@ -1,4 +1,4 @@
-# TODO: crossFade - add type of fade in/out; use Hilbert-transformed amplitude envelopes in segment(); use spec() instead of meanspec() in analyze(); check spectral centroid calculation, dB vs raw power scale in spectrograms; add shimmerLen (for unstead, trembling voice); maybe check if shimmer can be generated differently. Currently linear interpolation, so the ampl contour might be a bit weird; analyze() should export the spectrum of each frame (a long list) instead of only summaries - then the user can extract whatever measures of spectral shape they like; reportTime() - add par to report every N iterations
+# TODO: use Hilbert-transformed amplitude envelopes in segment(); use spec() instead of meanspec() in analyze(); check spectral centroid calculation, dB vs raw power scale in spectrograms; add shimmerLen (for unstead, trembling voice); maybe check if shimmer can be generated differently. Currently linear interpolation, so the ampl contour might be a bit weird; analyze() should export the spectrum of each frame (a long list) instead of only summaries - then the user can extract whatever measures of spectral shape they like; reportTime() - add par to report every N iterations
 
 #' @import stats graphics utils grDevices
 #' @encoding UTF-8
